# Base-of-Data-Analysis

./: .gitignore  README.md  main.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat
