[tool.poetry]
name = "base-of-data-analysis"
version = "0.1.0"
description = ""
authors = ["Shashatkin Anton <shashatkin@mail.ru>"]
readme = "README.md"
packages = [{include = "base_of_data_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
